# fastapi-slack-rocketry

./: .env.example  .mypy.ini  README.md  pyproject.toml  requirements.txt
src/: app.py  dependencies.py  logger.py  settings.py
src/api/: public.py
src/modules/: api.py  messaging.py  scheduler.py
src/scheduler/: public.py
src/slack/: client.py  public.py
