[tool.poetry]
name = "slackbot-fastapi-rocketry"
version = "0.1.0"
description = ""
authors = ["romualdr <romualdr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.96.0"}
uvicorn = "^0.22.0"
slack-bolt = "^1.18.0"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"
rocketry = "^2.5.1"
kink = "^0.6.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
asyncmock = "^0.4.2"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
